XP-4884 Publishing Wizard - Right-align X icon * Small styling fixes

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
@@ -55,7 +55,7 @@
 
     .status {
       .flex(1);
-      margin-right: 10px;
+      margin-right: 5px;
       text-align: right;
     }
 
@@ -109,7 +109,6 @@
           .remove {
             display: none;
             visibility: hidden;
-
             height: 16px;
           }
         }
@@ -119,6 +118,8 @@
             .remove {
               display: block;
               order: 1;
+              float: none;
+              margin: 0 5px 0 12px;
             }
           }
           .removable {
