--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/content-publish-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/content-publish-dialog.less
@@ -29,6 +29,8 @@
       }
       .remove {
         order: 1;
+        float: none;
+        margin: 0 5px 0 12px;
       }
     }
   }
